--- a/00-M1-CS1B-ASI-July-2022/00_Completed_Videos/M1-Question2.Rmd
+++ b/00-M1-CS1B-ASI-July-2022/00_Completed_Videos/M1-Question2.Rmd
@@ -1,55 +1,49 @@
 ---
 title: "Statistics with R"
-subtitle: "Introduction to R for Actuarial Students"
+subtitle: "Statistical Modelling with R for Actuarial Students"
 output:
   xaringan::moon_reader:
-    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
 
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-#library(dplyr)
+library(dplyr)
 library(janitor)
 
 
 ```
 
-```{r xaringan-themer, include=FALSE, warning=FALSE}
-library(xaringanthemer)
-style_mono_accent_inverse(
-  #base_color = "#3C989E")(
-  base_color = "#1c5253",
-  header_font_google = google_font("Josefin Sans"),
-  text_font_google   = google_font("Montserrat", "300", "300i"),
-  code_font_google   = google_font("Fira Mono")
-)
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
 ```
 
-
-* Introduction to R for Actuarial Students
-
-* CS1B Curriculum
-
-* Introduction to R programming
-* Fundamentals of Statistical Analysis
-
-* Question 1
----
-
-Q. 2) In a study done at the National Institute of Science and Technology, asbestos fibers on 
+* In a study done at the National Institute of Science and Technology, asbestos fibers on 
 filters were counted as part of a project to develop measurement standards for asbestos 
 concentration.
-An operator counted the number of fibers in each of 23 grid squares, yielding the 
+
+* An operator counted the number of fibers in each of 23 grid squares, yielding the 
 following counts:
-31,29,19,18,31,28, 34,27,34,30,16,18, 26,27,27,18,24,22, 28,24,21,17,24
-Assume that the Poisson distribution with unknown parameter lambda describes the 
+
+
+|    |    |    |    |    |    |
+|----|----|----|----|----|----|
+| 31 | 29 | 19 | 18 | 31 | 28 |
+| 34 | 27 | 34 | 30 | 16 | 18 |
+| 26 | 27 | 27 | 18 | 24 | 22 |
+| 28 | 24 | 21 | 17 | 24 |    |
+
+
+* Assume that the Poisson distribution with unknown parameter lambda describes the 
 variability from each of the grid squares. 
 
 ---
@@ -77,7 +71,7 @@ Theorem.
 ### Set Up Data
 
 ```{r}
-count <- c(31,29,19,18,31,28, 
+fiber_count <- c(31,29,19,18,31,28, 
            34,27,34,30,16,18, 
            26,27,27,18,24,22, 
            28,24,21,17,24)
@@ -97,18 +91,26 @@ count <- c(31,29,19,18,31,28,
   - `IQR()` calculates the Inter-quartile range directly
    
 ```{r}   
-Q1 <- quantile(count,0.25)
+Q1 <- quantile(fiber_count,0.25)
 Q1
 ```
 
 ```{r}
-Q3 <- quantile(count,0.75)
+Q3 <- quantile(fiber_count,0.75)
 Q3
 
 ```
 
+---
+
+
+### Exercise 1
+
+- **Q1, Q3, and IQR:**
+
+
 ```{r}
-IQR(count)
+IQR(fiber_count)
 ```
 
 
@@ -121,7 +123,7 @@ IQR(count)
  - `hist()` function creates a histogram of the fiber counts.
 
 ```{r eval=FALSE}
-hist(count)
+hist(fiber_count)
 ```
 
 ---
@@ -129,9 +131,23 @@ hist(count)
 ### Plot Histogram
 
 ```{r eval=FALSE}
-hist(fiber_counts, 
+hist(fiber_count, 
+     main = "Histogram of Fiber Counts", 
+     xlab = "Fiber Count", 
+     ylab = "Frequency",
+     breaks=8)
+```
+
+---
+
+
+### Plot Histogram
+
+```{r echo=FALSE}
+hist(fiber_count, 
       main = "Histogram of Fiber Counts", 
-     xlab = "Fiber Count", ylab = "Frequency")
+     xlab = "Fiber Count", 
+     ylab = "Frequency",breaks=8)
 ```
 
 ---
@@ -144,7 +160,7 @@ hist(fiber_counts,
    
 
 ```{r}
-lambda.hat=mean(count)
+lambda.hat=mean(fiber_count)
 
 print(lambda.hat)
 ```
@@ -156,11 +172,12 @@ print(lambda.hat)
 **Hypothesis Testing:**
    - `t.test` performs a one-sample t-test to compare the sample mean with the hypothesized mean of 25.
 
-H0: The mean fiber count is 25
-H1: Mean fiber count is not equal to 25
+$H_0$: The mean fiber count is 25
+
+$H_1$: Mean fiber count is not equal to 25
 
 ```{r}
-t.test(count,mu=25)
+t.test(fiber_count,mu=25)
 
 ```
 
@@ -178,26 +195,46 @@ t.test(count,mu=25)
    - The standard error of the sample mean for a Poisson distribution is the square root of the sample mean divided by the sample size.
 
 ```{r}
-lambda.hat.sterror=sqrt(lambda.hat/length(count))
+lambda.hat.sterror = sqrt(lambda.hat/length(fiber_count))
+
 print(lambda.hat.sterror)
 
 ```
+
+Remark: For a Poisson Distribution, the standard deviation is always equal to the square root of the mean.i.e σ = μ
+
+Above expression is coded in form: $$\sqrt{\frac{\sigma^2}{n}}.$$ 
+
 
 ---
 
 ### Exercise 6
 
-**Confidence Interval for Standard Error:**
+**Confidence Interval for Standard Mean:**
    - We assume a normal approximation for the distribution of the standard error.
    - The confidence interval is calculated using the z-score for the desired confidence level.
 
+
 ```{r}
-lambda.CI.Limits = lambda.hat + c(-1,1)*qnorm(.95)*lambda.hat.sterror
+#quantile
+Zs <- c(-1,1)*qnorm(.95)
+Zs
+```
+
+```{r}
+lambda.CI.Limits = lambda.hat + Zs*lambda.hat.sterror
 
 print(lambda.CI.Limits)
 
 ```
 
+---
+
+***..Just out of curiosity***
+
+```{r}
+t.test(fiber_count,conf.level = 0.90)
+```
 
 
 ---
@@ -205,7 +242,10 @@ print(lambda.CI.Limits)
 ### Exercise 7
 
 ```{r}
-probability = pnorm(30,lambda.hat,sqrt(lambda.hat),lower.tail = FALSE)
+probability = pnorm(30,
+                    mean = lambda.hat,
+                    sd = sqrt(lambda.hat),
+                    lower.tail = FALSE)
 
 cat("Probability of fiber count exceeding 30:", probability)
 ```
@@ -213,12 +253,17 @@ cat("Probability of fiber count exceeding 30:", probability)
 **Interpretation:**
 
 * The calculated probability represents the likelihood of observing a sample mean greater than 30, assuming the true population mean is equal to the sample mean. 
-* In this case, the probability is very small, indicating that it's highly unlikely to observe such a high fiber count by chance.
+
+
+---
 
 **Note:**
 
 - The CLT works best when the sample size is large enough. In this case, a sample size of 23 might not be considered very large, but it's still reasonable to apply the CLT as an approximation.
-- The Poisson distribution is often used to model count data like fiber counts. However, the CLT allows us to approximate the distribution of the sample mean using a normal distribution, even if the underlying distribution is not normal.
+
+- The Poisson distribution is often used to model count data like fiber counts. 
+
+- However, the CLT allows us to approximate the distribution of the sample mean using a normal distribution, even if the underlying distribution is not normal.
 
 ---
 
@@ -230,6 +275,7 @@ cat("Probability of fiber count exceeding 30:", probability)
 - The standard error quantifies the variability of the MLE.
 - The confidence interval for the standard error provides a range of plausible values for the true standard error.
 
+---
 
 ---
 
