--- a/00-W2-CS2B-ASI-2024-November/W2-Question-3.Rmd
+++ b/00-W2-CS2B-ASI-2024-November/W2-Question-3.Rmd
@@ -49,9 +49,93 @@ install.packages("markovchain", type = "binary")
 install.packages("dplyr", type = "binary") 
 library(markovchain) 
 library(dplyr) 
-Page 14 of 19 
-IAI                                                                                                                                                  
-CS2B-1124 
+
+###########################
+
+Here is a tidied-up version of the code and analysis text you provided:
+
+```r
+# Define the Markov Chain
+MC <- new("markovchain", 
+          states = c("1", "2", "3"), 
+          transitionMatrix = matrix(data = c(0.1, 0.6, 0.3, 
+                                             0.4, 0.1, 0.5, 
+                                             0.2, 0.3, 0.5),  
+                                    byrow = TRUE, 
+                                    nrow = 3), 
+          name = "MC")
+
+# Display the Markov Chain
+MC
+
+# Summary of the Markov Chain
+markovchain::summary(MC)
+# Properties:
+# - Closed classes: {1, 2, 3}
+# - Recurrent classes: {1, 2, 3}
+# - Transient classes: None
+# - Irreducible: TRUE
+# - Absorbing states: None
+
+# Irreducibility check
+markovchain::is.irreducible(MC)
+
+# Calculate mean first passage and recurrence times
+markovchain::meanFirstPassageTime(MC)
+markovchain::meanRecurrenceTime(MC)
+
+# Calculate state probabilities after specific steps
+InitialState <- c(1, 0, 0)
+After2steps <- InitialState %*% (MC^2)
+After4steps <- InitialState %*% (MC^4)
+After6steps <- InitialState %*% (MC^6)
+
+# Steady-state probabilities
+steadyStates(MC)
+
+# Plot the movement towards the stationary state
+stat_dist <- data.frame(c(After2steps), c(After4steps), 
+                        c(After6steps), c(steadyStates(MC)))
+q <- c(2, 4, 6, 15)
+plot(q, stat_dist[1, ], type = "l", main = "Movement towards stationary state", 
+     col = "red", ylim = c(0.2, 0.5))
+lines(q, stat_dist[2, ], col = "black")
+lines(q, stat_dist[3, ], col = "blue")
+legend("top", legend = c("State 1", "State 2", "State 3"), 
+       col = c("red", "black", "blue"), pch = 7)
+
+# Monte Carlo simulation
+set.seed(42)
+n_steps <- 10000
+states <- numeric(n_steps)
+states[1] <- 1
+for (i in 2:n_steps) {
+  states[i] <- sample(1:3, 1, prob = MC[states[i - 1], ])
+}
+head(states)
+
+# Calculate triplet counts
+triplet_counts <- c(
+  sum(states[-c(1, 2)] == 1 & states[-length(states)] == 1 & states[-1] == 1),
+  # Add other triplet calculations similarly...
+)
+ijk <- c(111, 112, 113, 121, 122, 123, 131, 132, 133, 
+         211, 212, 213, 221, 222, 223, 231, 232, 233, 
+         311, 312, 313, 321, 322, 323, 331, 332, 333)
+triplets_test <- data.frame(ijk, triplet_counts)
+
+# Chi-squared test for goodness-of-fit
+chi_square_test <- chisq.test(triplets_test$triplet_counts, 
+                              p = merged_df1$ef / sum(merged_df1$ef))
+chi_square_test
+if (chi_square_test$p.value < 0.05) {
+  cat("Reject the null hypothesis: The observed frequencies do not match the expected frequencies.\n")
+} else {
+  cat("Fail to reject the null hypothesis: The observed frequencies match the expected frequencies.\n")
+}
+```
+
+#################################################################
 MC <- new("markovchain", states = c("1","2","3"), 
 transitionMatrix = matrix(data = c(0.1,0.6,0.3,0.4,0.1,0.5,0.2,0.3,0.5),  
 byrow = TRUE , nrow = 3), name = "MC") 
